--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
   <div class="main">
-    <img class="bg-pattern-top" src="images\bg-pattern-top.svg" alt="bg-pattern-top" />
-    <img class="bg-pattern-bottom" src="images\bg-pattern-bottom.svg" alt="bg-pattern-bottom" />
+    <img class="bg-pattern-top" src="images/bg-pattern-top.svg" alt="bg-pattern-top" />
+    <img class="bg-pattern-bottom" src="images/bg-pattern-bottom.svg" alt="bg-pattern-bottom" />
     <div class="container">
-      <img class="bg-pattern-card" src="images\bg-pattern-card.svg" alt="bg-pattern-card.svg">
-      <img class="image-victor" src="images\image-victor.jpg" alt="victor-img">
+      <img class="bg-pattern-card" src="images/bg-pattern-card.svg" alt="bg-pattern-card.svg">
+      <img class="image-victor" src="images/image-victor.jpg" alt="victor-img">
       <h4 class="name">Victor Crest</h4>
       <h4 class="age">26</h4>
       <p class="city">London</p>
